--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^1.11.0",
     "mongodb": "^4.13.0",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
